[refactor] Replace first and last list access with sequenced collections
Apply the isolated Java 21 collection modernization in files that only switched to the sequenced collection APIs.